--- a/QuizGameV2/pom.xml
+++ b/QuizGameV2/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>mysql-connector-j</artifactId>
             <version>8.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.38</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
